Update copyright dates and add notification links across multiple HTML files

--- a/index.html
+++ b/index.html
@@ -411,6 +411,9 @@
                 <li class="nav-item">
                   <a class="nav-link" href="news.html">News</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="notification.html">Notification</a>
+                </li>
               </ul>
             </div>
           </div>
@@ -626,10 +629,10 @@
       </div> -->
 
       <div class="marquee">
-        <a href="admission.html">
+        <a href="notification.html">
           Click here to Learn About Admission and Important Dates! 
         </a>
-        <a href="admission.html" style="color: red; text-decoration: none; font-weight: bold;">
+        <a href="notification.html" style="color: red; text-decoration: none; font-weight: bold;">
           B.Pharm 2025-26 Admission: Notification Published on 23.07.2025
         </a>
         <!-- <a href="/assets/pdf/SECOND ALLOTMENT LIST.pdf" style="color: red; text-decoration: none; font-weight: bold;">
@@ -641,7 +644,7 @@
         </a> -->
       </div>
       <div class="notification-bar" style="background-color: #f2f2f2; padding: 10px; text-align: center;">
-        <p style="margin: 0; color: #333;"><strong>B.Pharm 2025-26 Admission: Notification Published!</strong> <a href="admission.html" style="color: #0066cc; text-decoration: none; font-weight: bold;">Click here.</a></p>
+        <p style="margin: 0; color: #333;"><strong>B.Pharm 2025-26 Admission: Notification Published!</strong> <a href="notification.html" style="color: #0066cc; text-decoration: none; font-weight: bold;">Click here.</a></p>
       </div>
       <!-- <div class="notification-bar" style="background-color: #f2f2f2; padding: 10px; text-align: center;">
         <p style="margin: 0; color: #333;"><strong>Second Allotment List Published!</strong> <a href="/assets/pdf/SECOND ALLOTMENT LIST.pdf" style="color: #0066cc; text-decoration: none; font-weight: bold;">Click here.</a></p>
@@ -2288,7 +2291,7 @@
           <div class="copyright-wrapper">
             <div class="row">
               <div class="col-md-6 align-self-center">
-                <span>Last updated on 23-07-2025</span>
+                <span>Last updated on 24-07-2025</span>
                 <p class="copyright-text">
                   &copy; Copyright <span id="date"></span>
                   <a href="https://connect.edentu.com/">Edentu Pvt Ltd</a> All
