--- a/notification.html
+++ b/notification.html
@@ -119,7 +119,7 @@
             <div class="collapse navbar-collapse" id="main_nav">
               <ul class="navbar-nav">
                 <li class="nav-item dropdown">
-                  <a class="nav-link active" href="/">Home</a>
+                  <a class="nav-link" href="/">Home</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown"
@@ -351,7 +351,9 @@
                   <a class="nav-link" href="news.html">News</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="notification.html">Notification</a>
+                  <a class="nav-link active" href="notification.html"
+                    >Notification</a
+                  >
                 </li>
               </ul>
             </div>
@@ -380,10 +382,10 @@
         style="background: url(assets/img/breadcrumb/01.jpg)"
       >
         <div class="container">
-          <h2 class="breadcrumb-title">Admission</h2>
+          <h2 class="breadcrumb-title">Notification</h2>
           <ul class="breadcrumb-menu">
             <li><a href="/">Home</a></li>
-            <li class="active">Admission</li>
+            <li class="active">Notification</li>
           </ul>
         </div>
       </div>
@@ -403,152 +405,42 @@
                 >
                   <h1
                     class="site-title"
-                    style="font-size: 32px; font-weight: 600; color: #125875"
+                    style="font-size: 28px; font-weight: 700; color: #125875"
                   >
-                    Admission
+                    B.PHARM ADMISSION NOTIFICATION 2025–2026
                   </h1>
-                  <p style="font-size: 20px; color: #333; font-weight: 500">
-                    Malabar College of Pharmacy, approved by the Pharmacy
-                    Council of India and affiliated to Kerala University of
-                    Health Sciences, offers a Bachelor of Pharmacy (B.Pharm)
-                    with a duration of 4 years.
+                  <p style="font-size: 18px; color: #333">
+                    Malabar College of Pharmacy (Recognized by PCI, Affiliated
+                    to Kerala University of Health Sciences) invites
+                    applications for admission to the Bachelor of Pharmacy
+                    (B.Pharm) Programme for the academic year 2025–2026.
+                    Admissions will be conducted as per the guidelines of the
+                    Admission supervisory committee and the provisionally
+                    approved prospectus.
                   </p>
                 </div>
+
                 <div class="site-heading mb-3">
                   <span class="site-title-tagline"
-                    ><i class="far fa-book-open-reader"></i> B.Pharm
-                    Course</span
-                  >
-                </div>
-                <p class="content-text">
-                  Selection of candidates for admission to B.Pharm course in
-                  Malabar College of Pharmacy will be purely on a merit basis.
-                  Details pertaining to admission are as follows.
-                </p>
-                <div class="site-heading mb-3">
-                  <span class="site-title-tagline"
-                    ><i class="far fa-book-open-reader"></i> Details of
-                    Seats</span
-                  >
-                </div>
-                <p class="content-text mt-2">
-                  Total Number of Seats: 60, with 30 seats open to all
-                  candidates under General Merit and 30 seats available through
-                  Management Quota. All applicants are eligible to be considered
-                  under General Merit.
-                </p>
-                <div class="site-heading mb-3">
-                  <span class="site-title-tagline"
-                    ><i class="far fa-book-open-reader"></i> Eligibility for
-                    Admission</span
-                  >
-                </div>
-                <p class="content-text mt-2">
-                  <strong>Citizenship:</strong> Only Indian nationals are
-                  eligible to apply.<br />
-                  <strong>Academic Qualification:</strong> Applicants must have
-                  successfully completed the Higher Secondary Examination in
-                  Kerala or an equivalent examination, securing a minimum of 50%
-                  in Physics, Chemistry, and Biology/Mathematics.<br />
-                  <strong>Age:</strong> Candidates must be at least 17 years old
-                  as of December 31, 2025. There is no upper age limit for the
-                  B.Pharm program, although this may be revised by PCI/KUHS in
-                  the future.
-                </p>
-                <div class="site-heading mb-3">
-                  <span class="site-title-tagline"
-                    ><i class="far fa-book-open-reader"></i> Procedure of
-                    Admission:</span
-                  >
-                </div>
-                <p class="content-text mt-2">
-                  Selected Candidates shall take admission at the appointed time
-                  and date in the College after paying the Tuition fee, Caution
-                  Deposit, and Special fee.
-                </p>
-                <div class="site-heading mb-3">
-                  <span class="site-title-tagline"
-                    ><i class="far fa-book-open-reader"></i> Documents to be
-                    submitted at the time of Admission:</span
-                  >
-                </div>
-                <ul class="content-text mt-2" style="list-style-type: none">
-                  <li>&#x2192; 10th Certificate</li>
-                  <li>&#x2192; Plus Two Certificate</li>
-                  <li>&#x2192; Transfer Certificate</li>
-                  <li>&#x2192; Conduct Certificate</li>
-                  <li>&#x2192; Migration Certificate</li>
-                  <li>
-                    &#x2192; Eligibility Certificate from KUHS if applicable
-                  </li>
-                  <li>&#x2192; Copy of AADHAR card</li>
-                  <li>&#x2192; Passport Size Photo</li>
-                  <li>
-                    &#x2192; Physical Fitness certificate from Medical officer
-                  </li>
-                </ul>
-                <div class="site-heading mb-4">
-                  <span class="site-title-tagline"
-                    ><i class="fas fa-file-alt"></i> Online Application
-                    Requirements</span
+                    ><i class="far fa-calendar-alt"></i> Application
+                    Details</span
                   >
                 </div>
 
-                <div class="bg-light p-4 rounded shadow-sm mb-4">
-                  <p
-                    class="mb-3 font-weight-bold text-dark"
-                    style="font-size: 1.1rem"
+                <p class="content-text">
+                  Eligible candidates are required to apply within the
+                  stipulated timeline through our website:
+                  <a href="malabarcollegeofpharmacy.com"
+                    ><strong style="color: #125875"
+                      >malabarcollegeofpharmacy.com</strong
+                    ></a
                   >
-                    <strong
-                      >The online application should contain the following
-                      particulars:</strong
-                    >
-                  </p>
-                  <ol
-                    class="content-text"
-                    style="padding-left: 20px; line-height: 1.8"
-                  >
-                    <li>
-                      <strong>1) College Details:</strong> Name of the Pharmacy
-                      College with Address and Registration details should be
-                      included in the online application form.
-                    </li>
-                    <li>
-                      <strong>2) Auto-generated Tracking:</strong> The online
-                      application form should contain Auto-generated
-                      Registration/Application Number and auto-generate date and
-                      time of submission of application.
-                    </li>
-                    <li>
-                      <strong>3) Upload Facility:</strong> The facility for
-                      uploading the photograph and signature of the candidate
-                      shall be provided.
-                    </li>
-                    <li>
-                      <strong>4) Quota Specification:</strong> The
-                      category/quota shall be clearly specified in the online
-                      application form.
-                    </li>
-                    <li>
-                      <strong>5) Candidate Declaration:</strong> A declaration
-                      by the candidate that the details provided are true to the
-                      best of their knowledge must be included.
-                    </li>
-                    <li>
-                      <strong>6) Print Facility:</strong> The facility for
-                      taking a printout of the application shall be provided to
-                      the candidate by the Pharmacy College.
-                    </li>
-                  </ol>
-                  <!-- <p class="mt-4 text-muted" style="font-size: 0.95rem">
-                    <i class="fas fa-exclamation-circle text-primary"></i>
-                    <em
-                      >Principal of the Pharmacy College shall ensure that the
-                      aforesaid particulars are included in the online
-                      application form.</em
-                    >
-                  </p> -->
-                </div>
+                </p>
+
+                <p class="content-text mt-3">
+                  <strong>Application Availability:</strong> 25.07.2025<br />
+                  <strong>Last Date to Submit Application:</strong> 02.08.2025
+                </p>
 
                 <div class="site-heading mb-3">
                   <span class="site-title-tagline"
