--- a/academic-leadership.html
+++ b/academic-leadership.html
@@ -342,6 +342,9 @@
                 <li class="nav-item">
                   <a class="nav-link" href="news.html">News</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="notification.html">Notification</a>
+                </li>
               </ul>
             </div>
           </div>
@@ -552,7 +555,7 @@
           <div class="copyright-wrapper">
             <div class="row">
               <div class="col-md-6 align-self-center">
-                <span>Last updated on 23-07-2025</span>
+                <span>Last updated on 24-07-2025</span>
                 <p class="copyright-text">
                   &copy; Copyright <span id="date"></span>
                   <a href="https://connect.edentu.com/">Edentu Pvt Ltd</a> All
