--- a/careers.html
+++ b/careers.html
@@ -344,6 +344,9 @@
                 <li class="nav-item">
                   <a class="nav-link" href="news.html">News</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="notification.html">Notification</a>
+                </li>
               </ul>
             </div>
           </div>
