--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
               <!-- <span>Malabar College of Pharmacy</span> -->
             </a>
             <div class="mobile-menu-right">
-            <!-- <div class="search-btn">
+            <div class="search-btn">
                 <button type="button" class="nav-right-link search-box-outer">
                   <i class="far fa-search"></i>
                 </button>
@@ -167,7 +167,7 @@
                 >
                   Apply Now
                 </a>
-              </div> -->
+              </div>
               <button
                 class="navbar-toggler"
                 type="button"
@@ -411,9 +411,17 @@
                 <li class="nav-item">
                   <a class="nav-link" href="news.html">News</a>
                 </li>
-                <li class="nav-item">
+<li class="nav-item">
                   <a class="nav-link" href="notification.html">Notification</a>
                 </li>
+                <div class="nav-right">
+                  <div class="nav-right-btn mt-2">
+                    <a href="login.html" class="theme-btn"
+                      ><span class="fal fa-pencil"></span>Apply Now</a
+                    >
+                  </div>
+                </div>       
+                </div>
               </ul>
             </div>
           </div>
@@ -633,9 +641,9 @@
           Click here to Learn About Admission and Important Dates! 
         </a>
         <a href="notification.html" style="color: red; text-decoration: none; font-weight: bold;">
-          B.Pharm 2025-26 Admission: Notification Published on 23.07.2025
+          B.Pharm 2025-26 Admission: Application Issued on 25.07.2025
         </a>
-        <!-- <a href="/assets/pdf/SECOND ALLOTMENT LIST.pdf" style="color: red; text-decoration: none; font-weight: bold;">
+                <!-- <a href="/assets/pdf/SECOND ALLOTMENT LIST.pdf" style="color: red; text-decoration: none; font-weight: bold;">
           Second Allotment List Published!
         </a>
         <span style="color: black; font-weight: bold;">&nbsp; | &nbsp;</span>
@@ -643,10 +651,13 @@
           Joined Students List of Second Allotment published!
         </a> -->
       </div>
-      <div class="notification-bar" style="background-color: #f2f2f2; padding: 10px; text-align: center;">
-        <p style="margin: 0; color: #333;"><strong>B.Pharm 2025-26 Admission: Notification Published!</strong> <a href="notification.html" style="color: #0066cc; text-decoration: none; font-weight: bold;">Click here.</a></p>
+      <div class="notification-bar" style="background-color: #e6f7ff; padding: 10px; text-align: center; margin-top: 5px;">
+        <p style="margin: 0; color: #005580;">
+          <strong>B.Pharm 2025-26 Admission: Application Issued!</strong>
+          <a href="login.html" style="color: #007bff; text-decoration: none; font-weight: bold;">Apply Now</a>
+        </p>
       </div>
-      <!-- <div class="notification-bar" style="background-color: #f2f2f2; padding: 10px; text-align: center;">
+            <!-- <div class="notification-bar" style="background-color: #f2f2f2; padding: 10px; text-align: center;">
         <p style="margin: 0; color: #333;"><strong>Second Allotment List Published!</strong> <a href="/assets/pdf/SECOND ALLOTMENT LIST.pdf" style="color: #0066cc; text-decoration: none; font-weight: bold;">Click here.</a></p>
       </div>
       <div class="notification-bar" style="margin-top: 2px; background-color: #f2f2f2; padding: 10px; text-align: center;">
@@ -2291,8 +2302,7 @@
           <div class="copyright-wrapper">
             <div class="row">
               <div class="col-md-6 align-self-center">
-                <span>Last updated on 24-07-2025</span>
-                <p class="copyright-text">
+                <span>Last updated on 25-07-2025</span>                <p class="copyright-text">
                   &copy; Copyright <span id="date"></span>
                   <a href="https://connect.edentu.com/">Edentu Pvt Ltd</a> All
                   Rights Reserved.
