--- a/notification.html
+++ b/notification.html
@@ -89,7 +89,7 @@
               <!-- <span>Malabar College of Pharmacy</span> -->
             </a>
             <div class="mobile-menu-right">
-              <!-- <div class="search-btn">
+             <div class="search-btn">
                 <button type="button" class="nav-right-link search-box-outer">
                   <i class="far fa-search"></i>
                 </button>
@@ -102,7 +102,7 @@
                 >
                   Apply Now
                 </a>
-              </div> -->
+              </div>
               <button
                 class="navbar-toggler"
                 type="button"
@@ -476,8 +476,10 @@
                       <tr>
                         <td class="text-center">2</td>
                         <td>Issue of Application</td>
-                        <td>25.07.2025</td>
-                      </tr>
+                        <td>25.07.2025    <a href="login.html" style="margin-left: 10px; background-color: #007bff; color: white; padding: 4px 10px; text-decoration: none; border-radius: 4px;">
+                          Apply Now
+                        </a>
+                    </td>
                       <tr>
                         <td class="text-center">3</td>
                         <td>Last Date of Submission of Application</td>
@@ -1250,8 +1252,7 @@
           <div class="copyright-wrapper">
             <div class="row">
               <div class="col-md-6 align-self-center">
-                <span>Last updated on 24-07-2025</span>
-                <p class="copyright-text">
+                <span>Last updated on 25-07-2025</span>                <p class="copyright-text">
                   &copy; Copyright <span id="date"></span>
                   <a href="https://connect.edentu.com/">Edentu Pvt Ltd</a> All
                   Rights Reserved.
