--- a/pharmaceutical-chemistry.html
+++ b/pharmaceutical-chemistry.html
@@ -89,7 +89,7 @@
               <!-- <span>Malabar College of Pharmacy</span> -->
             </a>
             <div class="mobile-menu-right">
-              <!-- <div class="search-btn">
+             <div class="search-btn">
                 <button type="button" class="nav-right-link search-box-outer">
                   <i class="far fa-search"></i>
                 </button>
@@ -102,7 +102,7 @@
                 >
                   Apply Now
                 </a>
-              </div> -->
+              </div>
               <button
                 class="navbar-toggler"
                 type="button"
@@ -350,10 +350,16 @@
                 <li class="nav-item">
                   <a class="nav-link" href="news.html">News</a>
                 </li>
-                <li class="nav-item">
+<li class="nav-item">
                   <a class="nav-link" href="notification.html">Notification</a>
                 </li>
-              </ul>
+                <div class="nav-right">
+                  <div class="nav-right-btn mt-2">
+                    <a href="login.html" class="theme-btn"
+                      ><span class="fal fa-pencil"></span>Apply Now</a
+                    >
+                  </div>
+                </div>              </ul>
             </div>
           </div>
         </nav>
@@ -602,8 +608,7 @@
           <div class="copyright-wrapper">
             <div class="row">
               <div class="col-md-6 align-self-center">
-                <span>Last updated on 24-07-2025</span>
-                <p class="copyright-text">
+                <span>Last updated on 25-07-2025</span>                <p class="copyright-text">
                   &copy; Copyright <span id="date"></span>
                   <a href="https://connect.edentu.com/">Edentu Pvt Ltd</a> All
                   Rights Reserved.
