--- a/login.html
+++ b/login.html
@@ -150,7 +150,7 @@
                             <p>Login with your MCP account</p>
                         </div>
 
-                        <!-- <form id="loginForm">
+                        <form id="loginForm">
                             <div class="form-group">
                                 <label>Email Address</label>
                                 <input type="email" class="form-control" placeholder="Your Email" required id="email">
@@ -172,9 +172,9 @@
                                     <i class="fas fa-spinner fa-spin"></i>
                                 </div>
                             </div>
-                        </form> -->
+                        </form>
 
-                        <div class="application-closed-notice">
+                        <!-- <div class="application-closed-notice">
                             <p>Application closed on 16-11-2024.</p>
                         </div>
                         <div class="rank-list-announcement">
@@ -192,12 +192,12 @@
                       
                         <div class="rank-list-announcement">
                           <p>Joined students list of second allotment published on 27-11-2024. <br><a href="/assets/pdf/JOINED STUDENT LIST OF SECOND ALLOTMENT.pdf" style="color: #0066cc; text-decoration: none; font-weight: bold;">View joined student list</a>.</p>
-                      </div>
+                      </div> -->
 
                         
-                        <!-- <div class="login-footer">
+                        <div class="login-footer">
                             <p>Don't have an account? <a href="register.html">Register.</a></p>
-                        </div> -->
+                        </div>
                     </div>
                 </div>
             </div>
@@ -279,8 +279,7 @@
             <div class="copyright-wrapper">
               <div class="row">
                 <div class="col-md-6 align-self-center">
-                  <span>Last updated on 24-07-2025</span>
-                  <p copyright-text">
+                  <span>Last updated on 25-07-2025</span>                  <p copyright-text">
                     &copy; Copyright <span id="date"></span>
                     <a href="https://connect.edentu.com/">Edentu Pvt Ltd</a> All
                     Rights Reserved.
