--- a/newsletters.html
+++ b/newsletters.html
@@ -85,7 +85,7 @@
               <!-- <span>Malabar College of Pharmacy</span> -->
             </a>
             <div class="mobile-menu-right">
-            <!-- <div class="search-btn">
+           <div class="search-btn">
                 <button type="button" class="nav-right-link search-box-outer">
                   <i class="far fa-search"></i>
                 </button>
@@ -98,7 +98,7 @@
                 >
                   Apply Now
                 </a>
-              </div> -->
+              </div>
               <button
                 class="navbar-toggler"
                 type="button"
@@ -342,10 +342,16 @@
                 <li class="nav-item">
                   <a class="nav-link" href="news.html">News</a>
                 </li>
-                <li class="nav-item">
+<li class="nav-item">
                   <a class="nav-link" href="notification.html">Notification</a>
                 </li>
-              </ul>
+                <div class="nav-right">
+                  <div class="nav-right-btn mt-2">
+                    <a href="login.html" class="theme-btn"
+                      ><span class="fal fa-pencil"></span>Apply Now</a
+                    >
+                  </div>
+                </div>              </ul>
             </div>
           </div>
         </nav>
