--- a/careers.html
+++ b/careers.html
@@ -92,7 +92,7 @@
                   <i class="far fa-search"></i>
                 </button>
               </div>
-              <div class="nav-right-btn mt-2">
+                            <!-- <div class="nav-right-btn mt-2">
                 <a
                   href="login.html"
                   class="theme-btn"
@@ -100,7 +100,8 @@
                 >
                   Apply Now
                 </a>
-              </div>
+              </div> -->
+
               <button
                 class="navbar-toggler"
                 type="button"
@@ -347,13 +348,14 @@
 <li class="nav-item">
                   <a class="nav-link" href="notification.html">Notification</a>
                 </li>
-                <div class="nav-right">
+                                <!-- <div class="nav-right">
                   <div class="nav-right-btn mt-2">
                     <a href="login.html" class="theme-btn"
                       ><span class="fal fa-pencil"></span>Apply Now</a
                     >
                   </div>
-                </div>              </ul>
+                </div>        -->
+         </ul>
             </div>
           </div>
         </nav>
