--- a/pharmacognosy.html
+++ b/pharmacognosy.html
@@ -94,7 +94,7 @@
                   <i class="far fa-search"></i>
                 </button>
               </div>
-              <div class="nav-right-btn mt-2">
+                            <!-- <div class="nav-right-btn mt-2">
                 <a
                   href="login.html"
                   class="theme-btn"
@@ -102,7 +102,8 @@
                 >
                   Apply Now
                 </a>
-              </div>
+              </div> -->
+
               <button
                 class="navbar-toggler"
                 type="button"
@@ -349,13 +350,14 @@
 <li class="nav-item">
                   <a class="nav-link" href="notification.html">Notification</a>
                 </li>
-                <div class="nav-right">
+                                <!-- <div class="nav-right">
                   <div class="nav-right-btn mt-2">
                     <a href="login.html" class="theme-btn"
                       ><span class="fal fa-pencil"></span>Apply Now</a
                     >
                   </div>
-                </div>              </ul>
+                </div>        -->
+         </ul>
             </div>
           </div>
         </nav>
@@ -567,7 +569,7 @@
           <div class="copyright-wrapper">
             <div class="row">
               <div class="col-md-6 align-self-center">
-                <span>Last updated on 25-07-2025</span>                <p class="copyright-text">
+                <span>Last updated on 03-08-2025</span>                <p class="copyright-text">
                   &copy; Copyright <span id="date"></span>
                   <a href="https://connect.edentu.com/">Edentu Pvt Ltd</a> All
                   Rights Reserved.
