Update admission table to show application closing tonight and add "Apply Now" button for 02.08.2025

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                   <i class="far fa-search"></i>
                 </button>
               </div>
-                            <!-- <div class="nav-right-btn mt-2">
+                            <div class="nav-right-btn mt-2">
                 <a
                   href="login.html"
                   class="theme-btn"
@@ -167,7 +167,7 @@
                 >
                   Apply Now
                 </a>
-              </div> -->
+              </div>
 
               <button
                 class="navbar-toggler"
@@ -415,13 +415,13 @@
 <li class="nav-item">
                   <a class="nav-link" href="notification.html">Notification</a>
                 </li>
-                                <!-- <div class="nav-right">
+                                 <div class="nav-right">
                   <div class="nav-right-btn mt-2">
                     <a href="login.html" class="theme-btn"
                       ><span class="fal fa-pencil"></span>Apply Now</a
                     >
                   </div>
-                </div>        -->
+                </div>       
   
                 </div>
               </ul>
@@ -643,9 +643,9 @@
           Click here to Learn About Admission and Important Dates! 
         </a>
         <a href="notification.html" style="color: red; text-decoration: none; font-weight: bold;">
-          B.Pharm 2025-26: Application Closed. Rank List on 03.08.2025
+          B.Pharm 2025-26: Applications close tonight (02.08.2025, 11:59 PM). Rank List will be published on 03.08.2025.
         </a>
-                        <!-- <a href="/assets/pdf/SECOND ALLOTMENT LIST.pdf" style="color: red; text-decoration: none; font-weight: bold;">
+                              <!-- <a href="/assets/pdf/SECOND ALLOTMENT LIST.pdf" style="color: red; text-decoration: none; font-weight: bold;">
           Second Allotment List Published!
         </a>
         <span style="color: black; font-weight: bold;">&nbsp; | &nbsp;</span>
@@ -655,11 +655,11 @@
       </div>
       <div class="notification-bar" style="background-color: #ffe6e6; padding: 10px; text-align: center; margin-top: 5px;">
         <p style="margin: 0; color: #cc0000;">
-          <strong>B.Pharm 2025-26 Application Closed on 02.08.2025.</strong>
+          <strong>B.Pharm 2025-26: Applications close tonight (02.08.2025, 11:59 PM).</strong>
           Rank List will be published on 03.08.2025.
         </p>
       </div>
-                  <!-- <div class="notification-bar" style="background-color: #f2f2f2; padding: 10px; text-align: center;">
+                        <!-- <div class="notification-bar" style="background-color: #f2f2f2; padding: 10px; text-align: center;">
         <p style="margin: 0; color: #333;"><strong>Second Allotment List Published!</strong> <a href="/assets/pdf/SECOND ALLOTMENT LIST.pdf" style="color: #0066cc; text-decoration: none; font-weight: bold;">Click here.</a></p>
       </div>
       <div class="notification-bar" style="margin-top: 2px; background-color: #f2f2f2; padding: 10px; text-align: center;">
@@ -2304,7 +2304,7 @@
           <div class="copyright-wrapper">
             <div class="row">
               <div class="col-md-6 align-self-center">
-                <span>Last updated on 03-08-2025</span>                <p class="copyright-text">
+                <span>Last updated on 02-08-2025</span>                <p class="copyright-text">
                   &copy; Copyright <span id="date"></span>
                   <a href="https://connect.edentu.com/">Edentu Pvt Ltd</a> All
                   Rights Reserved.
