--- a/pharmaceutical-chemistry.html
+++ b/pharmaceutical-chemistry.html
@@ -94,7 +94,7 @@
                   <i class="far fa-search"></i>
                 </button>
               </div>
-                            <!-- <div class="nav-right-btn mt-2">
+                            <div class="nav-right-btn mt-2">
                 <a
                   href="login.html"
                   class="theme-btn"
@@ -102,7 +102,7 @@
                 >
                   Apply Now
                 </a>
-              </div> -->
+              </div>
 
               <button
                 class="navbar-toggler"
@@ -354,13 +354,13 @@
 <li class="nav-item">
                   <a class="nav-link" href="notification.html">Notification</a>
                 </li>
-                                <!-- <div class="nav-right">
+                                 <div class="nav-right">
                   <div class="nav-right-btn mt-2">
                     <a href="login.html" class="theme-btn"
                       ><span class="fal fa-pencil"></span>Apply Now</a
                     >
                   </div>
-                </div>        -->
+                </div>       
          </ul>
             </div>
           </div>
@@ -610,7 +610,7 @@
           <div class="copyright-wrapper">
             <div class="row">
               <div class="col-md-6 align-self-center">
-                <span>Last updated on 03-08-2025</span>                <p class="copyright-text">
+                <span>Last updated on 02-08-2025</span>                <p class="copyright-text">
                   &copy; Copyright <span id="date"></span>
                   <a href="https://connect.edentu.com/">Edentu Pvt Ltd</a> All
                   Rights Reserved.
