--- a/prospectus2025.html
+++ b/prospectus2025.html
@@ -526,8 +526,8 @@
                 <td style="border: 1px solid #ddd; padding: 10px">
                   Last Date of Submission of Application
                 </td>
-                <td style="border: 1px solid #ddd; padding: 10px">
-                  02.08.2025
+                <td style="border: 1px solid #ddd; padding: 10px; color: red; font-weight: bold;">
+                  02.08.2025 – Closes Tonight at 11:59 PM
                 </td>
               </tr>
               <tr>
@@ -538,7 +538,7 @@
                   03.08.2025
                 </td>
               </tr>
-              <tr>
+                            <tr>
                 <td style="border: 1px solid #ddd; padding: 10px">
                   Publication of First Allotment List
                 </td>
@@ -898,7 +898,7 @@
           <div class="copyright-wrapper">
             <div class="row">
               <div class="col-md-6 align-self-center">
-                <span>Last updated on 03-08-2025</span>                <p class="copyright-text">
+                <span>Last updated on 02-08-2025</span>                <p class="copyright-text">
                   &copy; Copyright <span id="date"></span>
                   <a href="https://connect.edentu.com/">Edentu Pvt Ltd</a> All
                   Rights Reserved.
