--- a/admission.html
+++ b/admission.html
@@ -94,7 +94,7 @@
                   <i class="far fa-search"></i>
                 </button>
               </div>
-                            <div class="nav-right-btn mt-2">
+                            <!-- <div class="nav-right-btn mt-2">
                 <a
                   href="login.html"
                   class="theme-btn"
@@ -102,7 +102,7 @@
                 >
                   Apply Now
                 </a>
-              </div>
+              </div> -->
 
               <button
                 class="navbar-toggler"
@@ -354,12 +354,12 @@
 <li class="nav-item">
                   <a class="nav-link" href="notification.html">Notification</a>
                 </li>
-                                 <div class="nav-right">
+                                 <!-- <div class="nav-right">
                   <div class="nav-right-btn mt-2">
                     <a href="login.html" class="theme-btn"
                       ><span class="fal fa-pencil"></span>Apply Now</a
                     >
-                  </div>
+                  </div> -->
                 </div>       
          </ul>
             </div>
@@ -592,48 +592,45 @@
                       <tr>
                         <td class="text-center">2</td>
                         <td>Issue of Application</td>
-                        <td>
-                          25.07.2025
-                          <a
-                            href="login.html"
-                            style="
-                              margin-left: 10px;
-                              background-color: #007bff;
-                              color: white;
-                              padding: 4px 10px;
-                              text-decoration: none;
-                              border-radius: 4px;
-                            "
-                          >
-                            Apply Now
-                          </a>
-                        </td>
+                        <td>25.07.2025</td>
                       </tr>
                       <tr>
                         <td class="text-center">3</td>
                         <td>Last Date of Submission of Application</td>
                         <td>
                           02.08.2025
-                          <span
-                            style="
-                              color: red;
-                              font-weight: bold;
-                              margin-left: 10px;
-                            "
-                          >
-                            (Closes Tonight at 11:59 PM)
+                          <span style="color: red; font-weight: bold; margin-left: 10px;">
+                            (Closed)
                           </span>
                         </td>
                       </tr>
                       <tr>
                         <td class="text-center">4</td>
                         <td>Publication of Rank List</td>
-                        <td>03.08.2025</td>
+                        <td>
+                          03.08.2025
+                          <!-- <a
+                            href="/assets/pdf/BPHARM_RANKLIST_2025.pdf"
+                            target="_blank"
+                            style="margin-left: 10px; background-color: #28a745; color: white; padding: 4px 10px; text-decoration: none; border-radius: 4px;"
+                          >
+                            View
+                          </a> -->
+                        </td>
                       </tr>
                       <tr>
                         <td class="text-center">5</td>
                         <td>Publication of First Allotment List</td>
-                        <td>03.08.2025</td>
+                        <td>
+                          03.08.2025
+                          <!-- <a
+                            href="/assets/pdf/BPHARM_FIRST_ALLOTMENT_2025.pdf"
+                            target="_blank"
+                            style="margin-left: 10px; background-color: #28a745; color: white; padding: 4px 10px; text-decoration: none; border-radius: 4px;"
+                          >
+                            View
+                          </a> -->
+                        </td>
                       </tr>
                       <tr>
                         <td class="text-center">6</td>
@@ -642,12 +639,10 @@
                       </tr>
                       <tr>
                         <td class="text-center">7</td>
-                        <td>
-                          Publishing the Joining and Non-Joining Candidate List
-                        </td>
+                        <td>Publishing the Joining and Non-Joining Candidate List</td>
                         <td>04.08.2025</td>
                       </tr>
-                      <tr>
+                                            <tr>
                         <td class="text-center">8</td>
                         <td>Publication of Second Allotment</td>
                         <td>05.08.2025</td>
@@ -1392,7 +1387,7 @@
           <div class="copyright-wrapper">
             <div class="row">
               <div class="col-md-6 align-self-center">
-                <span>Last updated on 02-08-2025</span>                <p class="copyright-text">
+                <span>Last updated on 03-08-2025</span>                <p class="copyright-text">
                   &copy; Copyright <span id="date"></span>
                   <a href="https://connect.edentu.com/">Edentu Pvt Ltd</a> All
                   Rights Reserved.
