--- a/prospectus2025.html
+++ b/prospectus2025.html
@@ -526,8 +526,15 @@
                 <td style="border: 1px solid #ddd; padding: 10px">
                   Last Date of Submission of Application
                 </td>
-                <td style="border: 1px solid #ddd; padding: 10px; color: red; font-weight: bold;">
-                  02.08.2025 – Closes Tonight at 11:59 PM
+                <td
+                  style="
+                    border: 1px solid #ddd;
+                    padding: 10px;
+                    color: red;
+                    font-weight: bold;
+                  "
+                >
+                  02.08.2025 – Closed
                 </td>
               </tr>
               <tr>
@@ -536,14 +543,42 @@
                 </td>
                 <td style="border: 1px solid #ddd; padding: 10px">
                   03.08.2025
+                  <!-- <a
+                    href="/assets/pdf/BPHARM_RANKLIST_2025.pdf"
+                    target="_blank"
+                    style="
+                      margin-left: 10px;
+                      background-color: #28a745;
+                      color: white;
+                      padding: 4px 10px;
+                      text-decoration: none;
+                      border-radius: 4px;
+                    "
+                  >
+                    View PDF
+                  </a> -->
                 </td>
               </tr>
-                            <tr>
+              <tr>
                 <td style="border: 1px solid #ddd; padding: 10px">
                   Publication of First Allotment List
                 </td>
                 <td style="border: 1px solid #ddd; padding: 10px">
                   03.08.2025
+                  <!-- <a
+                    href="/assets/pdf/BPHARM_FIRST_ALLOTMENT_2025.pdf"
+                    target="_blank"
+                    style="
+                      margin-left: 10px;
+                      background-color: #28a745;
+                      color: white;
+                      padding: 4px 10px;
+                      text-decoration: none;
+                      border-radius: 4px;
+                    "
+                  >
+                    View PDF
+                  </a> -->
                 </td>
               </tr>
               <tr>
@@ -898,7 +933,8 @@
           <div class="copyright-wrapper">
             <div class="row">
               <div class="col-md-6 align-self-center">
-                <span>Last updated on 02-08-2025</span>                <p class="copyright-text">
+                <span>Last updated on 03-08-2025</span>
+                <p class="copyright-text">
                   &copy; Copyright <span id="date"></span>
                   <a href="https://connect.edentu.com/">Edentu Pvt Ltd</a> All
                   Rights Reserved.
