--- a/library.html
+++ b/library.html
@@ -90,7 +90,7 @@
                   <i class="far fa-search"></i>
                 </button>
               </div>
-                            <div class="nav-right-btn mt-2">
+                            <!-- <div class="nav-right-btn mt-2">
                 <a
                   href="login.html"
                   class="theme-btn"
@@ -98,7 +98,7 @@
                 >
                   Apply Now
                 </a>
-              </div>
+              </div> -->
 
               <button
                 class="navbar-toggler"
@@ -346,12 +346,12 @@
 <li class="nav-item">
                   <a class="nav-link" href="notification.html">Notification</a>
                 </li>
-                                 <div class="nav-right">
+                                 <!-- <div class="nav-right">
                   <div class="nav-right-btn mt-2">
                     <a href="login.html" class="theme-btn"
                       ><span class="fal fa-pencil"></span>Apply Now</a
                     >
-                  </div>
+                  </div> -->
                 </div>       
          </ul>
             </div>
