Rank list published

--- a/login.html
+++ b/login.html
@@ -185,7 +185,7 @@
                           <p>Application closed on 02.08.2025.</p>
                         </div>
 
-                        <div class="rank-list-announcement">
+                        <!-- <div class="rank-list-announcement">
                           <p>Rank list published on 03.08.2025.<br>
                             <a href="/assets/pdf/BPHARM_RANKLIST_2025.pdf" target="_blank" style="color: #0066cc; text-decoration: none; font-weight: bold;">
                               View rank list
@@ -199,7 +199,7 @@
                               View first allotment list
                             </a>.
                           </p>
-                        </div>
+                        </div> -->
 
 
                         
