--- a/prospectus2025.html
+++ b/prospectus2025.html
@@ -565,8 +565,8 @@
                 </td>
                 <td style="border: 1px solid #ddd; padding: 10px">
                   03.08.2025
-                  <!-- <a
-                    href="/assets/pdf/BPHARM_FIRST_ALLOTMENT_2025.pdf"
+                  <a
+                    href="/assets/pdf/MCP RANK LIST 25 - 26.pdf"
                     target="_blank"
                     style="
                       margin-left: 10px;
@@ -578,7 +578,7 @@
                     "
                   >
                     View PDF
-                  </a> -->
+                  </a>
                 </td>
               </tr>
               <tr>
