--- a/admission.html
+++ b/admission.html
@@ -609,13 +609,13 @@
                         <td>Publication of Rank List</td>
                         <td>
                           03.08.2025
-                          <!-- <a
-                            href="/assets/pdf/BPHARM_RANKLIST_2025.pdf"
+                          <a
+                            href="/assets/pdf/MCP RANK LIST 25 - 26.pdf"
                             target="_blank"
                             style="margin-left: 10px; background-color: #28a745; color: white; padding: 4px 10px; text-decoration: none; border-radius: 4px;"
                           >
                             View
-                          </a> -->
+                          </a>
                         </td>
                       </tr>
                       <tr>
