--- a/index.html
+++ b/index.html
@@ -642,18 +642,18 @@
         <a href="notification.html">
           Click here to Learn About Admission and Important Dates!
         </a>
-        <!-- <a href="/assets/pdf/BPHARM_RANKLIST_2025.pdf" target="_blank" style="color: green; text-decoration: none; font-weight: bold;">
-          B.Pharm 2025-26: Rank List Published on 03.08.2025 – View 
-        </a> -->
+        <a href="notification.html" style="color: green; text-decoration: none; font-weight: bold;">
+          B.Pharm 2025-26: Rank List Published on 03.08.2025 
+        </a>
       </div>
       
       <div class="notification-bar" style="background-color: #e6ffe6; padding: 10px; text-align: center; margin-top: 5px;">
         <p style="margin: 0; color: #006600;">
           <strong>B.Pharm 2025-26: Application closed on 02.08.2025.</strong>
           Rank List has been published on 03.08.2025. 
-          <!-- <a href="/assets/pdf/BPHARM_RANKLIST_2025.pdf" target="_blank" style="color: #006600; font-weight: bold;">
+          <a href="/assets/pdf/MCP RANK LIST 25 - 26.pdf" target="_blank" style="color: #006600; font-weight: bold;">
             View
-          </a> -->
+          </a>
         </p>
       </div>
                                     <!-- <div class="notification-bar" style="background-color: #f2f2f2; padding: 10px; text-align: center;">
