--- a/notification.html
+++ b/notification.html
@@ -500,8 +500,8 @@
                         <td>Publication of Rank List</td>
                         <td>
                           03.08.2025
-                          <!-- <a
-                            href="/assets/pdf/BPHARM_RANKLIST_2025.pdf"
+                          <a
+                            href="/assets/pdf/MCP RANK LIST 25 - 26.pdf"
                             target="_blank"
                             style="
                               margin-left: 10px;
@@ -513,7 +513,7 @@
                             "
                           >
                             View
-                          </a> -->
+                          </a>
                         </td>
                       </tr>
                       <tr>
